--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <!--Begin: Star-Clicks.com HTML Code--><script type='text/javascript' src='https://www.star-clicks.com/secure/ads.php?pid=74416755252945214'></script><!-- End: Star-Clicks.com -->
 <!--Begin: Star-Clicks.com HTML Code--><script type='text/javascript' src='https://www.star-clicks.com/secure/ads.php?pid=74416755252945214'></script><!-- End: Star-Clicks.com -->
+<!--Begin: Star-Clicks.com HTML Code--><script type='text/javascript' src='https://www.star-clicks.com/secure/ads.php?pid=74416755252945214'></script><!-- End: Star-Clicks.com -->
+<!--Begin: Star-Clicks.com HTML Code--><script type='text/javascript' src='https://www.star-clicks.com/secure/ads.php?pid=74416755252945214'></script><!-- End: Star-Clicks.com -->
+<!--Begin: Star-Clicks.com HTML Code--><script type='text/javascript' src='https://www.star-clicks.com/secure/ads.php?pid=74416755252945214'></script><!-- End: Star-Clicks.com -->
