--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <!--Begin: Star-Clicks.com HTML Code--><script type='text/javascript' src='https://www.star-clicks.com/secure/ads.php?pid=74416755252945214'></script><!-- End: Star-Clicks.com -->
+<iframe data-aa='2089149' loading='lazy' src='//ad.a-ads.com/2089149?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
